Add explicit extension installation warning to VSCode docs
- Add prominent warning about installing extensions first
- Explain VSCode formatter errors and how to fix them
- Provide quick essential extensions install command
- Prevents user confusion with defaultFormatter errors

--- a/dot_config/Code/User/settings.json
+++ b/dot_config/Code/User/settings.json
@@ -84,8 +84,9 @@
   // =========================
   // JavaScript/TypeScript
   // =========================
+  // Note: Uncomment after installing extensions (see docs/vscode-extensions.md)
   "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "esbenp.prettier-vscode" // Install: code --install-extension esbenp.prettier-vscode
   },
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
